Verify that the command is executable for '-e <command>.'

BUG: 125977

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=535934